removed unused file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <body>
 	    <div class="pure-g container">
 	    	<div class="pure-u-1 infos">
-		    	<img class="logo" src="yeleman_white-01.svg" />
+		    	<img class="logo" src="yeleman_white.svg" />
 		    	<h1>“We are Data Experts from West Africa”</h1>
 		    	<address>Hippdrome – Rue 240, Porte 1068 – BPE. 3713 Bamako (Mali) • <a href="tel:+22376333005">(223) 76 33 30 05</a> • <a href="mailto:info@yeleman.com">info@yeleman.com</a></address>
 		    </div>
