--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			.support img { height: 100px; }
 			.infos { margin-bottom: 1em; }
 		</style>
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	</head>
     <body>
 	    <div class="pure-g container">
