--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>yɛlɛman</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Data Collection Experts from Mali, West Africa.">
-		<meta name="keywords" content="yeleman, Mali, West-Arfrica, Africa, data-collection, statistics, reporting, data-mining, computing, reports, feedback, monitoring, rural officices, ICT, quality" />
+		<meta name="description" content="yɛlɛman builds and/or implement your IT-related tools in the field.">
 		<link rel="stylesheet" href="http://yui.yahooapis.com/combo?pure/0.5.0/base-min.css&pure/0.5.0/grids-min.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 		<link rel="canonical" href="http://yeleman.com/">
@@ -30,8 +29,8 @@
     <body>
 	    <div class="pure-g container">
 	    	<div class="pure-u-1 infos">
-		    	<img class="logo" src="yeleman_white.svg" />
-		    	<address>Hippdrome – Rue 240, Porte 1068 – BPE. 3713 Bamako (Mali) • <a href="tel:+22376333005">(223) 76 33 30 05</a> • <a href="mailto:info@yeleman.com">info@yeleman.com</a></address>
+		    	<img class="logo" src="yeleman_colors.png" />
+		    	<address><a href="map/">Hippdrome – Rue 240, Porte 1068</a> – BPE. 3713 Bamako (Mali) • <a href="tel:+22376333005">(223) 76 33 30 05</a> • <a href="mailto:info@yeleman.com">info@yeleman.com</a></address>
 		    </div>
 	    </div>
 	</body>
