fixed typo, removed font

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>yɛlɛman</title>
+		<title>yɛlɛman s.à.r.l</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="yɛlɛman builds and/or implement your IT-related tools in the field.">
-		<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-		<link rel="canonical" href="http://yeleman.com/">
+		<link rel="canonical" href="https://yeleman.com/">
 		<style type="text/css">
 			/*!
 			Pure v0.5.0
@@ -29,7 +28,7 @@
 		</style>
 		<style type="text/css">
 			body { background-color: #333333; color: white; }
-			body, * { font-family: 'Open Sans Condensed', sans-serif; }
+			body, * { font-family: sans-serif; }
 			a, a:visited, a:link, a:hover, a:focus, a:active { color: white !important; }
 			h1, h2, h3, h4, h5, h6 { font-weight: 400; }
 			h1 { margin: 0.3em 0px; }
@@ -47,8 +46,8 @@
     <body>
 	    <div class="pure-g container">
 	    	<div class="pure-u-1 infos">
-		    	<img class="logo" src="yeleman_colors.png" />
-		    	<address><a href="map/">Hippdrome – Rue 240, Porte 1068</a> – BPE. 3713 Bamako (Mali) • <a href="tel:+22376333005">(223) 76 33 30 05</a> • <a href="mailto:info@yeleman.com">info@yeleman.com</a></address>
+		    	<img class="logo" src="yeleman_colors.png" alt="yeleman logo"/>
+		    	<address><p><strong>yɛlɛman s.à.r.l</strong>, <a href="map/">Hippodrome – Rue 240, Porte 1068</a> – BPE. 3713 Bamako (Mali)</p><p><a href="tel:+22376333005">(223) 76 33 30 05</a> • <a href="mailto:info@yeleman.com">info@yeleman.com</a></p></address>
 		    </div>
 	    </div>
 	</body>
